syntax = "proto3";

import "event-base.proto";

message EventTraffic1MinRequestArgs {
  repeated int32 eventIds = 1;
  int32 routerCoverage = 2;
  string recordTimeStart = 3;
  string recordTimeEnd = 4;
  repeated int32 counterIndex = 5;
}

message EventTraffic1MinData {
  repeated EventTraffic1Min traffic1MinData = 1;
}

message EventTraffic1Min {
  int32 eventId = 1;
  int32 threshold = 2;
  int32 counterIndex = 3;
  int32 triggerValue = 4;
  repeated EventRouterTrafficData routerTrafficData = 5;
}

message EventRouterTrafficData {
  int32 routerId = 1;
  string routerName = 2;
  repeated EventTrafficData trafficData = 3;
}

message EventTrafficData {
  string recTime = 1;
  int32 traffic = 2;
}
